--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Srikar Reddy Karemma # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Experienced Full-stack Developer with practical knowledge in technologies like Hyperledger Fabric, Ethereum and Corda R3. Skilled in developing end-to-end MEAN and MERN stack applications. Strong engineering professional pursuing Masters in Computer Science from George Mason University. 
+  **Experienced Full-stack Developer with practical knowledge in technologies like Hyperledger Fabric, Ethereum and Corda R3. Skilled in developing end-to-end MEAN and MERN stack applications. Strong engineering professional pursuing Masters in Computer Science from George Mason University.** 
   <br><br>
   <a href="https://www.linkedin.com/in/srikarreddykaremma/">LinkedIn Profile</a> 
   
