--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Srikar Reddy Karemma # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Experienced Software Developer with practical knowledge in technologies like Java, JavaScript, Python. Skilled in developing end-to-end MEAN and MERN stack applications. Certified DevOps Engineer and a Professional Blockchain Developer. Pursuing Master's in Computer Science from George Mason University.
+  Experienced Software Developer with practical knowledge in technologies like Java, JavaScript, Python. Skilled in developing end-to-end MEAN and MERN stack applications. Certified DevOps Engineer and a Professional Blockchain Developer. Pursued Master's in Computer Science from George Mason University.
   <br><br>
   <a href="https://www.linkedin.com/in/srikarreddykaremma/">LinkedIn Profile</a> 
  
